debug animals