@@ -369,7 +369,7 @@ public class GameService {
             return new Response("upgrade is not available");
         }
 
-        if (!isPlayerInStore()) {
+        if (!isPlayerInStore(currentPlayer.getTiles().getFirst(),StoreType.BLACK_SMITH)) {
             return new Response("you have to be in blackSmith store to upgrade tools");
         }
 
@@ -447,7 +447,7 @@ public class GameService {
         if (carpenterShopFarmBuildings == null) {
             return new Response("there is no farm building with this name");
         }
-        if (!isPlayerInStore()) {
+        if (!isPlayerInStore(currentPlayer.getTiles().getFirst(),StoreType.CARPENTER_SHOP)) {
             return new Response("you have to be in Carpenter store to build");
         }
         Farm currentFarm = getPlayerMainFarm(currentPlayer);
@@ -458,9 +458,14 @@ public class GameService {
         }
         FarmBuilding farmBuilding = new FarmBuilding(carpenterShopFarmBuildings.getFarmBuildingType());
 
-        return new Response(buildStructureInAPlace(currentPlayer, carpenterShopFarmBuildings,
+        String message = buildStructureInAPlace(carpenterShopFarmBuildings,
                 currentFarm, farmBuilding, farmBuilding.getFarmBuildingType().getHeight(),
-                farmBuilding.getFarmBuildingType().getWidth(), x, y), true);
+                farmBuilding.getFarmBuildingType().getWidth(), x, y);
+        if (message.contains("not")){
+            return new Response(message);
+        }
+        payForBuild(carpenterShopFarmBuildings,currentPlayer);
+        return new Response(message, true);
     }
 
     public Response buyAnimal(String animalType, String name) {
@@ -468,16 +473,16 @@ public class GameService {
         MarnieShopAnimal marnieShopAnimal = MarnieShopAnimal.getFromName(animalType);
         if (marnieShopAnimal == null) {
             return new Response("there is no such animal");
-        } else if (!isPlayerInStore()) {
+        } else if (!isPlayerInStore(currentPlayer.getTiles().getFirst(),StoreType.MARNIE_SHOP)) {
             return new Response("you have to be in Marnie Shop Animal to buy animals");
         }
         Farm currentFarm = getPlayerMainFarm(currentPlayer);
-        if (!isAnimalNameUnique(currentFarm, name)) {
+        if (!isAnimalNameUnique(currentPlayer, name)) {
             return new Response("there is a animal with this name");
         } else if (!playerHaveEnoughResourceToBuyAnimal(marnieShopAnimal, currentPlayer)) {
             return new Response("you do not have enough resource to buy animal");
         }
-        Animal animal = new Animal(marnieShopAnimal.getAnimalType());
+        Animal animal = new Animal(marnieShopAnimal.getAnimalType(),name);
         animal.setOwner(currentPlayer);
         if (animal.getAnimalType().getIsBarnAnimal()) {
             return new Response(addNewBarnAnimal(currentFarm, animal, currentPlayer, marnieShopAnimal));
@@ -491,12 +496,11 @@ public class GameService {
         if (currentAnimal == null) {
             return new Response("you have to be around animal to pet it");
         } else if (!currentPlayer.getAnimals().contains(currentAnimal)) {
-            return new Response("you only can pet your animals");
+            return new Response("you only can pet your own animals");
         }
         if (!currentAnimal.getPet()) {
             currentAnimal.setPet(true);
-            int oldFriendShip = currentAnimal.getRelationShipQuality();
-            currentAnimal.setRelationShipQuality(oldFriendShip + 15);
+            currentAnimal.changeFriendShip(15);
             return new Response("you pet " + name, true);
         }
         return new Response("you already pet this animal");
@@ -537,8 +541,7 @@ public class GameService {
         currentAnimal.setIsAnimalStayOutAllNight(!isAnimalInBarnOrCage(currentAnimal, farms));
         if (!currentAnimal.getIsFeed()) {
             currentAnimal.setIsFeed(true);
-            int oldFriendShip = currentAnimal.getRelationShipQuality();
-            currentAnimal.setRelationShipQuality(oldFriendShip + 8);
+            currentAnimal.changeFriendShip(8);
         }
         return new Response("animal shepherd successfully", true);
     }
@@ -557,8 +560,7 @@ public class GameService {
             return new Response("animal already eaten");
         }
         currentAnimal.setIsFeed(true);
-        int oldFriendShip = currentAnimal.getRelationShipQuality();
-        currentAnimal.setRelationShipQuality(oldFriendShip + 8);
+        currentAnimal.changeFriendShip(8);
         return new Response(currentAnimal.getName() + " eat hay!", true);
     }
 
@@ -795,7 +797,13 @@ public class GameService {
         return token.toString();
     }
 
-    private Boolean isPlayerInStore() {
+    private Boolean isPlayerInStore(Tile tile,StoreType storeType) {
+        List<Structure> structures = App.getInstance().getCurrentGame().getVillage().findStructuresByTile(tile);
+        for (Structure structure : structures) {
+            if (structure instanceof Store){
+                return ((Store)structure).getStoreType().equals(storeType);
+            }
+        }
         return false;
     }
 
@@ -910,17 +918,19 @@ public class GameService {
             return false;
         }
         for (Map.Entry<Product, Integer> productIntegerEntry : carpenterShopFarmBuildings.getCost().entrySet()) {
-            if (player.getInventory().getProducts().containsKey(productIntegerEntry.getKey())) {
-                if (player.getInventory().getProducts().get(productIntegerEntry.getKey()) < productIntegerEntry.getValue()) {
-                    return false;
+            for (Map.Entry<Salable, Integer> salableIntegerEntry : player.getInventory().getProducts().entrySet()) {
+                if (salableIntegerEntry.getKey().getName().equalsIgnoreCase(productIntegerEntry.getKey().getName())){
+                    Salable salable = player.getInventory().getProductFromBackPack(productIntegerEntry.getKey().getName());
+                    if (player.getInventory().getProducts().get(salable) < productIntegerEntry.getValue()) {
+                        return false;
+                    }
                 }
             }
-            return false;
         }
         return true;
     }
 
-    private String buildStructureInAPlace(Player player, CarpenterShopFarmBuildings carpenterShopFarmBuildings, Farm farm, Structure structure, int length, int width, int x, int y) {
+    private String buildStructureInAPlace(CarpenterShopFarmBuildings carpenterShopFarmBuildings, Farm farm, Structure structure, int length, int width, int x, int y) {
         Tile[][] tiles1 = app.getCurrentGame().tiles;
         List<Tile> tiles2 = new ArrayList<>();
         boolean flag = true;
@@ -929,15 +939,20 @@ public class GameService {
                 if (tiles1[j][k].getIsFilled()) {
                     flag = false;
                 } else {
-                    tiles1[j][k].setIsFilled(true);
                     tiles2.add(tiles1[j][k]);
                 }
             }
         }
         if (flag) {
+            for (Tile tile : tiles2) {
+                tile.setIsFilled(true);
+                if (!carpenterShopFarmBuildings.equals(CarpenterShopFarmBuildings.SHIPPING_BIN) &&
+                        !carpenterShopFarmBuildings.equals(CarpenterShopFarmBuildings.WELL)){
+                    tile.setIsPassable(true);
+                }
+            }
             structure.getTiles().addAll(tiles2);
             farm.getStructures().add(structure);
-            payForBuild(carpenterShopFarmBuildings, player);
             return "this building successfully add to your farm";
         }
         tiles2.clear();
@@ -948,16 +963,15 @@ public class GameService {
         int oldGold = player.getAccount().getGolds();
         player.getAccount().setGolds(oldGold - carpenterShopFarmBuildings.getPrice());
         for (Map.Entry<Product, Integer> productIntegerEntry : carpenterShopFarmBuildings.getCost().entrySet()) {
-            player.getInventory().deleteProductFromBackPack(productIntegerEntry.getKey(), player, productIntegerEntry.getValue());
+            Salable salable = player.getInventory().getProductFromBackPack(productIntegerEntry.getKey().getName());
+            player.getInventory().deleteProductFromBackPack(salable, player, productIntegerEntry.getValue());
         }
     }
 
-    private boolean isAnimalNameUnique(Farm farm, String name) {
-        for (Structure structure : farm.getStructures()) {
-            if (structure instanceof Animal) {
-                if (((Animal) structure).getName().equalsIgnoreCase(name)) {
-                    return false;
-                }
+    private boolean isAnimalNameUnique(Player player, String name) {
+        for (Animal animal : player.getAnimals()) {
+            if (animal.getName().equals(name)){
+                return false;
             }
         }
         return true;
@@ -1028,8 +1042,8 @@ public class GameService {
         for (Animal animal : player.getAnimals()) {
             if (animal.getName().equalsIgnoreCase(name)) {
                 for (Direction value : Direction.values()) {
-                    if (player.getTiles().get(0).getX() + value.getXTransmit() == animal.getTiles().get(0).getX() &&
-                            player.getTiles().get(0).getY() + value.getYTransmit() == animal.getTiles().get(0).getY()) {
+                    if (player.getTiles().getFirst().getX() + value.getXTransmit() == animal.getTiles().getFirst().getX() &&
+                            player.getTiles().getFirst().getY() + value.getYTransmit() == animal.getTiles().getFirst().getY()) {
                         return animal;
                     }
                 }
@@ -1054,6 +1068,7 @@ public class GameService {
             token.append("name: ").append(animal.getName()).append("\n");
             token.append("is feed today: ").append(animal.getIsFeed()).append("\n");
             token.append("is pet today: ").append(animal.getPet()).append("\n");
+            token.append("friendShip: ").append(animal.getRelationShipQuality()).append("\n");
         }
         return token.toString();
     }
